apps/base/blog/networking.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: blog-uclab8
    app.kubernetes.io/name: nginx
    org: empire
  name: nginx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: blog-uclab8
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
