apps/base/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: blog-uclab8
    app.kubernetes.io/name: nginx
    org: olympus
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  rules:
    - host: blog.uclab8.net
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - blog.uclab8.net
      secretName: blog-uclab8net-prod-tls
